Added main divs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Modal Style</title>
 </head>
 <body>
-    
+    <div class="popup">
+        <div class="alertarea">
+            <div class="alerticon"></div>
+        </div>
+        <div class="textarea">
+            <div class="textandsimbol"></div>
+            <div class="testparag"></div>
+            <div class="buttons"></div>
+        </div>
+    </div>
 </body>
 </html>
