--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             <div class="alerticon"></div>
         </div>
         <div class="textarea">
-            <div class="textandsimbol"></div>
+            <div class="text">
+                <div class="title">Are you sure you want to do that?</div>
+                <div class="xicon"></div>
+            </div>
             <div class="testparag"></div>
             <div class="buttons"></div>
         </div>
