--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 <body>
     <div class="popup">
         <div class="alertarea">
-            <div class="alerticon"></div>
+            <div class="alerticon">!</div>
         </div>
         <div class="textarea">
             <div class="text">
                 <div class="title">Are you sure you want to do that?</div>
-                <div class="xicon"></div>
+                <div class="xicon">&#10006;</div>
+        </div>
+            <div class="testparag">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque deleniti nisi voluptas dolore, maxime perspiciatis laborum veritatis dolor ducimus quod porro nesciunt exercitationem quae fugit quas nobis tenetur eos voluptatum?</div>
+            <div class="buttons">
+                <button class="continue">Continue</button>
+                <button class="cancel">Cancel</button>
             </div>
-            <div class="testparag"></div>
-            <div class="buttons"></div>
         </div>
     </div>
 </body>
